Consistent line sizes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,10 @@
         "--max-line-length=100"
     ],
     "python.formatting.provider": "black",
+    "python.formatting.blackArgs": [
+        "--line-length",
+        "100"
+    ],
     "python.analysis.typeCheckingMode": "basic",
     "editor.formatOnSave": true,
     "python.testing.pytestArgs": [
