--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,10 @@
         "statusBar.foreground": "#e7e7e7",
         "statusBarItem.hoverBackground": "#2d2d11",
         "titleBar.inactiveBackground": "#08080399",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "titleBar.inactiveForeground": "#e7e7e799",
+        "sash.hoverBorder": "#2d2d11",
+        "statusBarItem.remoteBackground": "#080803",
+        "statusBarItem.remoteForeground": "#e7e7e7"
     },
     "peacock.color": "#080803",
     "python.linting.flake8Enabled": true,
